<resources>
    <string name="app_name">PMT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="register_email_field">Email</string>
    <string name="register_password">Password</string>
    <string name="register_password2">Repeat Password</string>
    <string name="register_name">Name</string>
    <string name="register_dob">Date of Birth</string>
    <string name="action_new_gathering">New Gathering</string>
    <string name="action_friends_list">Friends List</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_new_gathering">NewGatheringActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="friends">Friends</string>
</resources>
