<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gillingham.pmt.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_gathering"
        android:orderInCategory="100"
        android:title="@string/action_new_gathering"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_friends_list"
        android:orderInCategory="100"
        android:title="@string/action_friends_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
</menu>
